--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,11 @@
         </nav>
     </header>
     <section id="main">
-
+        <h2>Welcome!</h2>
+        <p>Please</p>
+        <button><a href="/signin">Sign In</a></button>
+        <p>Don't have an account?</p>
+        <button><a href="/signup">Sign Up</a></button>
     </section>
 </body>
 </html>
