--- a/html/messager/main.html
+++ b/html/messager/main.html
@@ -3,6 +3,7 @@
 <head>
     <title>Sign in</title>
     <link rel="stylesheet" href="../static/style.css">
+    <script src="static/messager/main.js"></script>
 </head>
 <body>
     <header>
