--- a/html/messager/home.html
+++ b/html/messager/home.html
@@ -8,16 +8,18 @@
 <body>
     <header>
         <h1>Sign in</h1>
-        <nav id="navbar">
-        </nav>
     </header>
     <section id="content" class="container">
         <section id="sidebar">
             
         </section>
-        <section id="main">
+        <section id="messages">
     
         </section>
+        <form id="messageForm" action="/data/messages" method="POST">
+            <input type="text" id="message" name="message" autocomplete="off" required="">
+            <input type="submit" value="send">
+        </form>
     </section>
 </body>
 </html>
